# loop-engineering-template

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  LOG.md  README.md  pyproject.toml
.claude/skills/new-loop/: SKILL.md
.claude/skills/review-signals/: SKILL.md
.claude/skills/ship-loop-change/: SKILL.md
.github/workflows/: ci.yml
docs/: architecture.md  concepts.md  examples.md  getting_started.md  loop-engineer-pattern.md
examples/: research_agent.py
knowledge/: README.md
knowledge/domains/: README.md
knowledge/domains/dev-trigger/: README.md
knowledge/domains/task-refinement/: README.md
knowledge/notes/: README.md
knowledge/signals/: README.md
scripts/: task_refinement_loop.py
src/loop_engineering/: __init__.py
src/loop_engineering/core/: __init__.py  exceptions.py  loop.py  state.py  stop_conditions.py  tools.py
src/loop_engineering/core/providers/: __init__.py  anthropic_provider.py  base.py
tests/: fakes.py  test_loop.py  test_stop_conditions.py  test_tools.py
