[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loop-engineering"
version = "0.1.0"
description = "A small, reusable implementation of the agentic loop pattern (perceive -> plan -> act -> observe) for Claude-powered agents."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Ryan Leckenby" }]
dependencies = ["anthropic>=0.40.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6", "mypy>=1.10"]

[project.urls]
Repository = "https://github.com/ryleckenby/loop-engineering-template"

[tool.hatch.build.targets.wheel]
packages = ["src/loop_engineering"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
packages = ["loop_engineering"]
ignore_missing_imports = true
